# documentation

./: 404.html  README.md  doc_script.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages.yml
ahmed/: mkdocs.yml
ahmed/docs/: index.html  index.md  survey_status.md
ahmed/docs/contact/: index.html
ahmed/docs/people/: index.html
ahmed/docs/publications/: index.html
ahmed/docs/research/: index.html
ahmed/docs/survey_status/: index.html
dalia/: mkdocs.yml
dalia/docs/: index.html  survey_status.md
dalia/docs/contact/: index.html
dalia/docs/people/: index.html
dalia/docs/publications/: index.html
dalia/docs/research/: index.html
dalia/docs/survey_status/: index.html
docs/ahmed/: mkdocs.yml
docs/dalia/: mkdocs.yml
search/: search_index.json
